# test

./: Apml_fdk.c  User_platform.c  coreTypes.h  meson.build
apml/: Apml_fdk.c  Apml_fdk.h  Apml_smbus.c  Apml_smbus.h  Makefile  User_platform.c  test.c
